--- a/style.css
+++ b/style.css
@@ -71,6 +71,14 @@ body {
     font-display: swap; /* Para mejor rendimiento de carga */
 }
 
+@font-face {
+    font-family: 'Astronomicon';
+    src: url('Astronomicon.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .outer-border {
     margin: 5px; border-radius: 5px; 
     max-width: 1200px; 
@@ -943,4 +951,5 @@ h1 {
     color: #b8b8b8;
 
 }
+
 
