--- a/astrology_section.css
+++ b/astrology_section.css
@@ -9,8 +9,7 @@
 .astrology-display {
     display: grid;
     grid-template-columns: 45% 45%;
-    gap: 10px 10%;
-    margin: 5px;
+    gap: 5px 10%;
 }
 
 .astro-card-header {
@@ -34,6 +33,10 @@
     text-align: center;
     margin: 0px 30px;
     font-style: italic;
+}
+
+.moon-phase-content {
+    font: 0.8rem;
 }
 
 .today-headline {
@@ -60,7 +63,7 @@
 .astro-name {
     font-weight: bold;
     font-style: normal;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1;
     text-align: left;
     padding: 3px 0;
@@ -78,7 +81,7 @@
 }
 
 .body-position {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
@@ -105,7 +108,7 @@
 
 
 .tarot-card-item {
-    padding: 6px 0;
+    padding: 3px 0;
     display: block;
     align-items: flex-start;
     gap: 8px;
@@ -338,13 +341,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 5px;
+    margin-top: 5px;
     height: 1.6rem;
+    padding: 8px 0;
 }
 
 .moon-phase-header, .moon-label, .moon-label-right {
     height: 1.6rem;
-    height: 44px;
     display: flex;
     align-items: center;
 }
