--- a/astrology_section.css
+++ b/astrology_section.css
@@ -176,7 +176,7 @@
     font-style: normal;
     display: inline-block;
     font-size: 2em;
-    line-height: 1.5em;
+    line-height: 1rem;
     font-weight: bold;
 }
 
