--- a/stats.css
+++ b/stats.css
@@ -13,7 +13,7 @@
     border: 2px solid var(--primary-color);
     background: white;
     border-radius: 5px;
-    padding: 10px;
+    padding: 5px;
 
 }
 
@@ -23,6 +23,7 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0 20px;
+    margin-bottom: 5px;
 }
 
 .period-btn {
@@ -122,7 +123,7 @@
     border-bottom: 1px solid #f0f0f0;
     transition: background-color 0.2s ease;
     border-radius: 12px;
-    padding: 8px;
+    padding: 2px;
     color: var(--secondary-color);
 }
 
