--- a/historial.css
+++ b/historial.css
@@ -27,15 +27,16 @@
     font-family: 'Inconsolata';
 }
 
+
+
+
 .history-tabs {
     display: flex;
-    gap: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    gap: 5px;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 0 20px;
-
+    padding: 0 5px;
+    margin-bottom: 5px;
 }
 
 .history-tab {
@@ -45,13 +46,15 @@
     color: var(--primary-color);
     cursor: pointer;
     font-family: 'Inconsolata', monospace;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     transition: all 0.3s ease;
     border-radius: 3px;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 5px;
 }
+
+
 
 .history-tab:hover {
     background: var(--primary80);
@@ -268,7 +271,7 @@
 
 .daily-card, .spread-name {
     font-size: 1.1rem;
-    color: #ea731790;
+    color: var(--secondary-color);
     font-weight: bold;
     display: flex;
     align-items: center; /* Centrado vertical interno */
