--- a/ultimo.css
+++ b/ultimo.css
@@ -960,3 +960,38 @@ header {
     display: none;
 }
 
+.history-subtitle {
+    font-size: 1rem;
+    text-transform: uppercase;
+    text-align: left;
+    font-family: 'Inconsolata';
+    color: var(--primary80);
+    margin-top: 10px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid var(--primary80);
+}
+
+.property-value-tag {
+    padding: 4px 4px;
+    border: 1px solid var(--primary-color);
+    background: white;
+    color: var(--primary-color);
+    cursor: pointer;
+    font-family: 'Inconsolata', monospace;
+    font-size: 0.9rem;
+    transition: all 0.3s ease;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: bold;
+}
+
+.property-values {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0 5px;
+    margin-bottom: 5px;
+}
