--- a/charts.css
+++ b/charts.css
@@ -24,10 +24,10 @@
     font-weight: 600;
     color: var(--primary-color);
     text-align: center;
-    margin-bottom: 10px;
     font-family: 'Roboto Serif', serif;
     text-transform: uppercase;
     letter-spacing: 1px;
+    line-height: 1rem;
 }
 
 /* Fila de gráficos */
@@ -296,7 +296,8 @@
     align-items: center;
     gap: 8px;
     border-radius: 8px;
-    min-width: 180px;
+    width: 70%;
+
 }
 
 .legend-color-inline {
@@ -317,7 +318,7 @@
 
 .legend-name-inline {
     font-family: 'Inconsolata', monospace;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
     color: var(--primary-color);
     flex: 1;
@@ -326,8 +327,8 @@
 
 .legend-value-inline {
     font-family: 'Inconsolata', monospace;
-    font-size: 12px;
-    color: var(--primary80);
+    font-size: 1rem;
+    color: var(--primary-color);
     font-weight: bold;
     white-space: nowrap;
 }
@@ -347,6 +348,5 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 8px;
-
     max-width: 600px;
 }
